fix overflow

--- a/hw2/extern_style.css
+++ b/hw2/extern_style.css
@@ -67,5 +67,6 @@ footer {
     left: 0px;
     right: 0px;
     bottom: 0px;
+    overflow: hidden;
 }
 
